fixing double click issue on mobile

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -50,11 +50,14 @@
   background: black;
   opacity: 0;
 }
-
-@media(hover){
-  .card-link:hover {
-    opacity: 0.1;
-  }
-  // ensures that the card hover behavior doesn't cause "double tap" problems on mobile
+.card-link:hover {
+  opacity: 0.1;
 }
+
+// RESPONSIVE DESIGN
+@media (hover:none) {
+  .card-link:hover {
+  }
+}
+// ensures that the card hover behavior doesn't cause "double tap" problems on mobile
 
